--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.15.3",
     "bootstrap": "^4.0.0-alpha.6",
     "cross-env": "^3.2.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
